<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:orientation="vertical" android:background="@color/gray">
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="100sp" app:srcCompat="@drawable/fon" android:id="@+id/imageView"
            android:scaleType="centerCrop" android:contentDescription="@string/flowers"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Welcome"
            android:textSize="24sp" android:textAlignment="center" android:typeface="monospace"
            android:layout_marginBottom="5sp" android:background="@color/colorAccent"
            android:layout_weight="1"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textViewLogin" android:hint="@string/EnterName"
            android:textSize="24sp" android:fontFamily="sans-serif-condensed" android:layout_weight="1"
            android:inputType="text" android:background="@color/gray"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editTextPassword" android:hint="@string/EnterPassword"
            android:fontFamily="sans-serif-condensed"
            android:layout_marginBottom="8sp" android:textSize="24sp" android:layout_weight="1"
            android:autofillHints="" android:background="@color/gray"/>
    <Button
            android:text="@string/MakeOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/buttonLogin" android:textSize="24sp"
            android:layout_weight="1" android:onClick="makeOrder"/>
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:srcCompat="@drawable/fon" android:id="@+id/imageView2"
            android:scaleType="centerCrop" android:cropToPadding="true"
            android:contentDescription="@string/flowers"/>
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="110sp" app:srcCompat="@drawable/fon" android:id="@+id/imageView3"
            android:scaleType="centerCrop" android:cropToPadding="true"
            android:contentDescription="@string/flowers"/>

</LinearLayout>